k8s-app/app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-app-service
            port:
              number: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: todo-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
spec:
  selector:
    matchLabels:
      app: todo-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
      - image: localhost:5001/todo-app
        name: todo-app
        ports:
        - containerPort: 8000
          name: todo-app
        volumeMounts:
        - name: secret-volume
          mountPath: /run/secrets/postgres
          readOnly: true
      volumes:
      - name: secret-volume
        secret:
          secretName: dbcredentials
